--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,6 @@ fastapi==0.115.0
 uvicorn==0.30.6
 requests==2.32.3
 faster-whisper==1.0.3
-supabase-py==2.4.0
+supabase==2.4.0
 python-dotenv==1.0.1
 pydantic==2.9.2
